--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Anshul Mahajan | 3D Product Specialist</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+
+    <!-- Google AdSense Script -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7217868140064787"
+        crossorigin="anonymous"></script>
+
     <style>
         /* Global Styles */
         body {
@@ -177,7 +182,6 @@
             nav a {
                 font-size: 0.9em;
                 margin: 0 10px;
-                /* keep inline */
             }
             section h2 {
                 font-size: 2em;
@@ -193,36 +197,6 @@
             }
         }
 
-        /* Video Popup (Right Side) */
-        #video-popup {
-            display: none;
-            position: fixed;
-            right: 10px;
-            top: 50%;
-            transform: translateY(-50%);
-            z-index: 9999;
-            background-color: rgba(0, 0, 0, 0.8);
-            padding: 10px;
-            border-radius: 10px;
-            width: 300px; /* Smaller size */
-        }
-
-        #video-popup iframe {
-            width: 100%;
-            height: 200px; /* Smaller size */
-        }
-
-        #close-video {
-            position: absolute;
-            top: -5px;
-            right: -5px;
-            background-color: #ff66b2;
-            border: none;
-            color: white;
-            border-radius: 50%;
-            font-size: 1.2em;
-            cursor: pointer;
-        }
     </style>
 </head>
 <body>
@@ -240,34 +214,34 @@
     <div class="container">
         <h2>Portfolio</h2>
         <div class="portfolio-grid">
-            <a href="https://www.behance.net/gallery/223759049/Lava-Blaze-3-5G-Sleek-Design-Powerful-Presence" target="_blank" class="portfolio-item">
-                <img src="Lava blaze 3.gif" alt="Lava Blaze 3">
-                <div class="project-info">Lava Blaze 3</div>
-            </a>
-            <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank" class="portfolio-item">
-                <img src="Pebble_Neo.gif" alt="Pebble Neo">
-                <div class="project-info">Pebble Neo</div>
-            </a>
-            <a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style" target="_blank" class="portfolio-item">
-                <img src="Lava_O3.gif" alt="Lava O3">
-                <div class="project-info">Lava O3</div>
-            </a>
-            <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank" class="portfolio-item">
-                <img src="Lava_Prowatch.gif" alt="Lava Prowatch X">
-                <div class="project-info">Lava Prowatch X</div>
-            </a>
-            <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank" class="portfolio-item">
-                <img src="ProBuds.jpg" alt="ProBuds">
-                <div class="project-info">ProBuds</div>
-            </a>
-            <a href="https://www.behance.net/gallery/210212511/Casio" target="_blank" class="portfolio-item">
-                <img src="Casio.png" alt="Casio">
-                <div class="project-info">Casio</div>
-            </a>
-            <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank" class="portfolio-item">
-                <img src="Vast.png" alt="Vast">
-                <div class="project-info">Vast</div>
-            </a>
+            <!-- Portfolio items here -->
+            <div class="portfolio-item">
+                <img src="https://via.placeholder.com/600x400" alt="Project 1">
+                <div class="project-info">
+                    <p>Project 1</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="https://via.placeholder.com/600x400" alt="Project 2">
+                <div class="project-info">
+                    <p>Project 2</p>
+                </div>
+            </div>
+            <div class="portfolio-item">
+                <img src="https://via.placeholder.com/600x400" alt="Project 3">
+                <div class="project-info">
+                    <p>Project 3</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- AdSense Ad Unit -->
+        <div style="text-align:center; margin-top: 30px;">
+            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-client="ca-pub-7217868140064787"
+                data-ad-slot="1234567890"  <!-- Replace with your ad slot number -->
+                data-ad-format="auto"></ins>
         </div>
     </div>
 </section>
@@ -275,9 +249,7 @@
 <section id="about">
     <div class="container">
         <h2>About Me</h2>
-        <p>I am an experienced 3D Product Video Specialist and Motion Designer with expertise in creating visually stunning, high-impact content. My proficiency spans Blender, Cinema 4D, Unreal Engine, and other leading tools.</p>
-        <p>I specialize in crafting cinematic 3D product advertisements and visual storytelling. At Takila Designs, I deliver high-quality, 15–45 second 3D product videos that showcase product features with intricate details, driven by meticulous lighting and realism.</p>
-        <p>My aim is to produce visual content that is not only beautiful but also deeply engaging.</p>
+        <p>I'm a 3D Product Video Specialist. My aim is to create stunning content that tells a story.</p>
     </div>
 </section>
 
@@ -298,35 +270,8 @@
     <p>&copy; 2025 Anshul Mahajan. All rights reserved.</p>
 </footer>
 
-<!-- Video Popup Section -->
-<div id="video-popup">
-    <button id="close-video">X</button>
-    <video id="video-player" width="100%" height="200" controls>
-        <source src="https://github.com/anshulmahajan5/anshulmahajan5.github.io/raw/main/Main_Glory.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-</div>
-
-<!-- Scroll Event to Show Video -->
 <script>
-    // Scroll event to show video popup when "About Me" is in view
-    window.addEventListener('scroll', function() {
-        const aboutSection = document.getElementById('about');
-        const videoPopup = document.getElementById('video-popup');
-        
-        const aboutRect = aboutSection.getBoundingClientRect();
-        if (aboutRect.top <= window.innerHeight && aboutRect.bottom >= 0) {
-            videoPopup.style.display = "block";
-        }
-    });
-
-    // Close video popup and pause the video
-    document.getElementById("close-video").addEventListener("click", function() {
-        const videoPlayer = document.getElementById("video-player");
-        videoPlayer.pause(); // Pause the video
-        videoPlayer.currentTime = 0; // Reset video to the beginning
-        document.getElementById("video-popup").style.display = "none"; // Hide the video popup
-    });
+    (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
 </body>
