--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <title>Anshul Mahajan | 3D Product Specialist</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-
-    <!-- Google AdSense Script -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7217868140064787"
-        crossorigin="anonymous"></script>
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7217868140064787" crossorigin="anonymous"></script>
     <style>
         /* Global Styles */
         body {
@@ -182,6 +178,7 @@
             nav a {
                 font-size: 0.9em;
                 margin: 0 10px;
+                /* keep inline */
             }
             section h2 {
                 font-size: 2em;
@@ -197,6 +194,36 @@
             }
         }
 
+        /* Video Popup (Right Side) */
+        #video-popup {
+            display: none;
+            position: fixed;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            z-index: 9999;
+            background-color: rgba(0, 0, 0, 0.8);
+            padding: 10px;
+            border-radius: 10px;
+            width: 300px; /* Smaller size */
+        }
+
+        #video-popup iframe {
+            width: 100%;
+            height: 200px; /* Smaller size */
+        }
+
+        #close-video {
+            position: absolute;
+            top: -5px;
+            right: -5px;
+            background-color: #ff66b2;
+            border: none;
+            color: white;
+            border-radius: 50%;
+            font-size: 1.2em;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -214,64 +241,34 @@
     <div class="container">
         <h2>Portfolio</h2>
         <div class="portfolio-grid">
-            <!-- Portfolio items here with links to your Behance projects -->
-            <div class="portfolio-item">
-                <a href="https://www.behance.net/gallery/223759049/Lava-Blaze-3-5G-Sleek-Design-Powerful-Presence" target="_blank">
-                    <img src="https://via.placeholder.com/600x400" alt="Lava Blaze 3">
-                    <div class="project-info">
-                        <p>Lava Blaze 3</p>
-                    </div>
-                </a>
-            </div>
-            <div class="portfolio-item">
-                <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank">
-                    <img src="https://via.placeholder.com/600x400" alt="Pebble Neo">
-                    <div class="project-info">
-                        <p>Pebble Neo</p>
-                    </div>
-                </a>
-            </div>
-            <div class="portfolio-item">
-                <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank">
-                    <img src="https://via.placeholder.com/600x400" alt="Lava Prowatch X">
-                    <div class="project-info">
-                        <p>Lava Prowatch X</p>
-                    </div>
-                </a>
-            </div>
-            <div class="portfolio-item">
-                <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank">
-                    <img src="https://via.placeholder.com/600x400" alt="Lava ProBuds">
-                    <div class="project-info">
-                        <p>Lava ProBuds</p>
-                    </div>
-                </a>
-            </div>
-            <div class="portfolio-item">
-                <a href="https://www.behance.net/gallery/210212511/Casio" target="_blank">
-                    <img src="https://via.placeholder.com/600x400" alt="Casio">
-                    <div class="project-info">
-                        <p>Casio</p>
-                    </div>
-                </a>
-            </div>
-            <div class="portfolio-item">
-                <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank">
-                    <img src="https://via.placeholder.com/600x400" alt="VAST">
-                    <div class="project-info">
-                        <p>VAST</p>
-                    </div>
-                </a>
-            </div>
-        </div>
-
-        <!-- AdSense Ad Unit -->
-        <div style="text-align:center; margin-top: 30px;">
-            <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-client="ca-pub-7217868140064787"
-                data-ad-slot="1234567890"  <!-- Replace with your ad slot number -->
-                data-ad-format="auto"></ins>
+            <a href="https://www.behance.net/gallery/223759049/Lava-Blaze-3-5G-Sleek-Design-Powerful-Presence" target="_blank" class="portfolio-item">
+                <img src="Lava blaze 3.gif" alt="Lava Blaze 3">
+                <div class="project-info">Lava Blaze 3</div>
+            </a>
+            <a href="https://www.behance.net/gallery/220961207/Pebble-Neo-Redefining-Everyday-Elegance" target="_blank" class="portfolio-item">
+                <img src="Pebble_Neo.gif" alt="Pebble Neo">
+                <div class="project-info">Pebble Neo</div>
+            </a>
+            <a href="https://www.behance.net/gallery/221737249/Lava-O3-Redefining-Performance-and-Style" target="_blank" class="portfolio-item">
+                <img src="Lava_O3.gif" alt="Lava O3">
+                <div class="project-info">Lava O3</div>
+            </a>
+            <a href="https://www.behance.net/gallery/217335825/Lava-Prowatch-X" target="_blank" class="portfolio-item">
+                <img src="Lava_Prowatch.gif" alt="Lava Prowatch X">
+                <div class="project-info">Lava Prowatch X</div>
+            </a>
+            <a href="https://www.behance.net/gallery/201361809/Lava-ProBuds" target="_blank" class="portfolio-item">
+                <img src="ProBuds.jpg" alt="ProBuds">
+                <div class="project-info">ProBuds</div>
+            </a>
+            <a href="https://www.behance.net/gallery/210212511/Casio" target="_blank" class="portfolio-item">
+                <img src="Casio.png" alt="Casio">
+                <div class="project-info">Casio</div>
+            </a>
+            <a href="https://www.behance.net/gallery/197347117/VAST-Journey-to-the-Cosmos" target="_blank" class="portfolio-item">
+                <img src="Vast.png" alt="Vast">
+                <div class="project-info">Vast</div>
+            </a>
         </div>
     </div>
 </section>
@@ -279,7 +276,9 @@
 <section id="about">
     <div class="container">
         <h2>About Me</h2>
-        <p>I'm a 3D Product Video Specialist. My aim is to create stunning content that tells a story.</p>
+        <p>I am an experienced 3D Product Video Specialist and Motion Designer with expertise in creating visually stunning, high-impact content. My proficiency spans Blender, Cinema 4D, Unreal Engine, and other leading tools.</p>
+        <p>I specialize in crafting cinematic 3D product advertisements and visual storytelling. At Takila Designs, I deliver high-quality, 15–45 second 3D product videos that showcase product features with intricate details, driven by meticulous lighting and realism.</p>
+        <p>My aim is to produce visual content that is not only beautiful but also deeply engaging.</p>
     </div>
 </section>
 
@@ -291,17 +290,41 @@
         <div class="contact-links">
             <a href="https://www.linkedin.com/in/anshul-mahajan-/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://www.behance.net/anshul_mahajan" target="_blank"><i class="fab fa-behance"></i></a>
-            <a href="https://www.instagram.com/anshul_3d/" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
     </div>
 </section>
 
 <footer>
-    <p>&copy; 2025 Anshul Mahajan. All rights reserved.</p>
+    <p>Copyright © 2025 Anshul Mahajan | All Rights Reserved</p>
 </footer>
+
+<!-- Google AdSense -->
+<ins class="adsbygoogle"
+    style="display:block; text-align:center;"
+    data-ad-client="ca-pub-7217868140064787"
+    data-ad-slot="YOUR_AD_SLOT_NUMBER"
+    data-ad-format="auto"></ins>
 
 <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+<!-- Video Popup -->
+<div id="video-popup">
+    <button id="close-video">X</button>
+    <iframe src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+<script>
+    // Open Video Popup on clicking a thumbnail or button
+    document.querySelector('.portfolio-item').addEventListener('click', function() {
+        document.getElementById('video-popup').style.display = 'block';
+    });
+
+    // Close the video popup
+    document.getElementById('close-video').addEventListener('click', function() {
+        document.getElementById('video-popup').style.display = 'none';
+    });
 </script>
 
 </body>
